--- a/resume1.html
+++ b/resume1.html
@@ -109,6 +109,9 @@
             <li>SDLC</li>
             <li>A+</li>
         </ul>
+    <p>
+        Here is a link to my <a href="https://www.linkedin.com/in/mohammed-usman-06488a16b/" target="_blank">Linkedin</a> 
+    </p>
         
     
 </body>
