--- a/resume3/index.html
+++ b/resume3/index.html
@@ -15,7 +15,7 @@
 </header>
 <section>
 <aside>
-    <nav>
+    <nav id="navlinks">
     <h2>Menu</h2>
     <br>
     <a href=#education>Education</a> 
@@ -24,37 +24,38 @@
     <br>
     <a href=#skills>Skills</a> 
 </nav>
+<br>
 </aside>
 <article>
-<main>
+<main class="bgcol">
     <br>
     <h2 id="education">Education</h2>
     
     <h3>Intro to Web at <a href="http://codespace.co.za/">CodeSpace Academy</a></h3>
-    <p>
+    <p class="light">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
     <h3>Bcom Information Management</h3>
-    <p>
+    <p class="light">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </p>
     <h2 id="experience">Experience</h2>
     <h3>Salesperson at <b>Perocilli Shoes</b></h3>
-    <ul>
+    <ul class="light">
         <li>Assist customers in finding the right product for them</li>
         <li>Upselling and recommending products that were more relevant to the clients needs</li>
         <li>Recieving and merchandising of the products on the shop floor</li>
         <li>Advertising and marketing of the product through social media</li>
     </ul>
     <h3>Bookseller at <b>Bargain Books</b></h3>
-    <ul>
+    <ul class="light">
         <li>Assist in customer service and sourcing of required product for the customers </li>
         <li>Receieving and Merchandising of stock ensuring that the displays are relevant to current affairs in order to draw customers in</li>
         <li>finding new clients by approaching companies, firms and schools and proposing sales</li>
         <li>ensuring that relevant stock is replenished and dead stock is being upsold and preventing it from being re ordered.</li>
     </ul>
     <h2 id="skills">Skills</h2>
-    <ul>
+    <ul class="light">
         <li>HTML</li>
         <li>CSS</li>
         <li>Javascript</li>
