--- a/resume3/index.html
+++ b/resume3/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-    <aside> <img src="./image/22DB4-092.JPG" alt="pic of mohammed" width="180" height="300"></aside>
+    <aside> <img id="image" src="./image/22DB4-092.JPG" alt="pic of mohammed" width="180" height="300"></aside>
     <h1>Mohammed Usman</h1>
     <h3>Hi I am studying towards becoming a Front-End Web Developer.</h3>
 </header>
